# IsHoliday

./: LICENSE  README.md  pyproject.toml
isholiday/: __init__.py  calendar.py
isholiday/data/: holidays_banking.toml  holidays_canada.toml  holidays_japan.toml  holidays_market.toml  holidays_uk.toml
isholiday/tests/: test_banking_5year.py  test_canada_5year.py  test_holidays.py  test_japan_5year.py  test_market_5year.py  test_uk_5year.py
