[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "isholiday"
version = "1.0.0"
description = "Determine if a date is a US holiday — banking, market, or custom calendars via TOML"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "FireByDragon"}]
keywords = ["holiday", "banking", "market", "NYSE", "NASDAQ", "calendar", "business-day"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/FireByDragon/IsHoliday"
Repository = "https://github.com/FireByDragon/IsHoliday"
Issues = "https://github.com/FireByDragon/IsHoliday/issues"

[tool.setuptools.packages.find]
include = ["isholiday*"]

[tool.setuptools.package-data]
"isholiday.data" = ["*.toml"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.pytest.ini_options]
testpaths = ["isholiday/tests"]
